# PulseDAG

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.rehearsal  LICENSE  README.md  VERSION  docker-compose.rehearsal.yml
.cargo/: config.toml
.github/: pull_request_template.md
.github/patches/: pr755_apply_frontier.py  pr755_clippy_test_init.patch  pr755_compact_parent_context.patch  pr755_fix_lag_counter_schema.py  pr755_frontier_after_selected.patch  pr755_frontier_reconcile.patch  pr755_immediate_locator.patch  pr755_observed_block_locator.patch  pr755_preserve_pre_resume_gap.patch  pr755_prune_429_retry.patch  pr755_readiness_anchor.patch
.github/scripts/: pr755_apply_retained_wait.py
.github/workflows/: apply_mempool_nounset_fix.yml  apply_p2p_redial_deadlock_fix.yml  apply_pulsedagd_workspace_regression_fix.yml  apply_v2_3_0_runtime_round4_patch.yml  apply_v2_3_0_runtime_round5_patch.yml  apply_v2_3_0_runtime_round6.yml  apply_v2_3_0_runtime_round7.yml  burnin-24h.yml  ci.yml  export-closeout-source.yml  finalize_v2_3_0_runtime_round4_patch.yml  finalize_v2_3_0_runtime_round4_patch_v3.yml  fix_pr751_unused_variable.yml  lint.yml  miner-smoke.yml  node-smoke.yml  p2p_real_runtime_regression.yml  (+61 more)
apps/pulsedag-miner/: Cargo.toml  GPU.md  README.md
apps/pulsedag-miner/src/: lib.rs  main.rs
apps/pulsedag-miner/tests/: miner_multithread_behavior.rs  pow_perf_baseline.rs  pow_vectors.rs
apps/pulsedagd/: Cargo.toml
apps/pulsedagd/src/: RC3_NOTES.md  app_state.rs  block_request.rs  config.rs  main.rs
config/: node-a.env.example  node-b.env.example  node-c.env.example
crates/pulsedag-core/: Cargo.toml  README.md
crates/pulsedag-core/benches/: pow_core.rs
crates/pulsedag-core/examples/: pow_thread_baseline.rs
crates/pulsedag-core/src/: accept.rs  apply.rs  consistency.rs  errors.rs  genesis.rs  ghostdag.rs  lib.rs  mempool.rs  mining.rs  ordering.rs  orphans.rs  pow.rs  replay.rs  retarget.rs  selection.rs  state.rs  sync_pipeline.rs  tx.rs  types.rs  validation.rs
crates/pulsedag-core/tests/: blue_score.rs  confirmed_mempool_cleanup.rs  dag_invariant.rs  fuzz_parsing_props.rs  merge_set.rs  pow_miner_node_agreement.rs  pow_official_vectors.rs  pow_v2_2_10_vectors.rs  replay_determinism.rs  replay_order_independence.rs  selected_parent.rs
crates/pulsedag-p2p/: CI_DEADLOCK_FIX_PENDING.md  Cargo.toml  README.md
crates/pulsedag-p2p/src/: lib.rs  messages.rs  runtime.rs
crates/pulsedag-p2p/tests/: partition_rejoin_slo.rs
crates/pulsedag-rpc/: Cargo.toml  LOCK_ORDERING.md  README.md
crates/pulsedag-rpc/data/mining_templates/: expired-template.json
crates/pulsedag-rpc/src/: api.rs  lib.rs  redaction.rs  routes.rs
crates/pulsedag-rpc/src/handlers/: address.rs  block_validate.rs  blocks.rs  bootstrap.rs  canonical_sync.rs  checks.rs  contracts.rs  dag.rs  dashboard.rs  diagnostics.rs  errors.rs  incremental_sync.rs  maintenance.rs  metrics.rs  mine.rs  mining_accounting.rs  mining_jobs.rs  mining_payouts.rs  mining_pool.rs  mining_submit.rs  mining_template.rs  mining_workers.rs  mod.rs  orphans.rs  p2p.rs  p2p_runtime.rs  policy.rs  pow.rs  pow_auto_run.rs  pow_check.rs  pow_dashboard.rs  pow_export.rs  pow_hash.rs  pow_health.rs  pow_metrics.rs  pow_metrics_capture.rs  pow_metrics_history.rs  pow_metrics_prune.rs  pow_metrics_summary.rs  pow_mine.rs  (+19 more)
crates/pulsedag-rpc/tests/: api_security_integration.rs  cors.rs  miner_node_contract.rs  rpc_liveness_backlog.rs
docker/: Dockerfile.miner  Dockerfile.node  docker-compose.testnet.yml
docs/: API_V1.md  BASELINE_CLEANUP_AUTHORITY.md  BLOCK_PROPAGATION_REHEARSAL_V2_2_9.md  BOOTNODE_RUNBOOK_V2_2_19.md  BURN_IN_14D.md  BURN_IN_30D.md  BURN_IN_GATE.md  BURN_IN_GATE_RC6.md  BURN_IN_MULTINODE_CHECKLIST.md  BURN_IN_OPERATIONS.md  CLEANUP_AUDIT_V2_2_18.md  CLEANUP_AUDIT_V2_2_18_FINAL.md  CLEANUP_AUDIT_V2_2_18_PASS2.md  CLEANUP_CANDIDATES_V2_2_18.md  CLEANUP_VALIDATION_EVIDENCE_V2_2_18.md  CLOSING_CHECKLIST_V2_2_11.md  CLOSING_CHECKLIST_V2_2_12.md  CLOSING_CHECKLIST_V2_2_13.md  CLOSING_CHECKLIST_V2_2_15.md  CLOSING_CHECKLIST_V2_2_16.md  CLOSING_CHECKLIST_V2_2_17.md  CLOSING_CHECKLIST_V2_2_18.md  CLOSING_CHECKLIST_V2_2_19_FINAL.md  CLOSING_CHECKLIST_V2_2_20.md  CLOSING_CHECKLIST_V2_2_9.md  CODEX_TASK_V2_2_19_P2P_KEEPALIVE_SMOKE_DIAGNOSTICS.md  DAG_SAFETY_INVARIANTS_V2_2_13.md  DOCKER_REHEARSALS_V2_2_19.md  DOCKER_REHEARSALS_V2_2_20.md  ERROR_AUDIT_2026-04-21.md  ERROR_AUDIT_2026-04-24.md  EXTERNAL_SERVER_REHEARSAL_V2_2_9.md  FIREWALL_GUIDE_V2_2_19.md  FULL_SNAPSHOT_NOTES.md  GHOSTDAG_SELECTION_DESIGN_SPEC.md  GHOSTDAG_SELECTION_MULTI_PR_PLAN.md  GOSSIP_SYNC_IMPLEMENTATION.md  GO_NO_GO_V2_2_18.md  INSTALL_BINARIES_V2_2_19.md  INSTALL_BINARIES_V2_3_0.md  (+127 more)
fuzz/: README.md
scripts/: LEGACY_COMPATIBILITY_V2_3_0.md  README.md  apply_pulsedagd_workspace_regression_fix.py  burnin-daily.ps1  check_code_comment_language.py  dev-smoke.ps1  docker_v2_2_19_rehearsal.sh  docker_v2_2_20_rehearsal.sh  docker_v2_3_0_rehearsal.sh  hot-path-baseline.sh  list_cleanup_candidates.sh  local_multinode_v2_2_8.sh  mempool-sanitize-smoke.ps1  p2p-sync-rpc-baseline.sh  p2p_sync_rpc_baselines.py  p2p_sync_rpc_baselines_v2_3_0.py  pow-bench.sh  pruning-snapshot-integration-evidence.sh  recovery-smoke.ps1  repository_hygiene.py  repository_hygiene.sh  repository_version_surface_audit.py  restart-node-b-smoke.ps1  restore-drill-evidence.sh  smoke.ps1  smoke_v2_2_7.sh  snapshot-productization-evidence.sh  start-miner-a.ps1  start-node-b.ps1  start-node-c.ps1  three-node-gossip-sync.ps1  two-node-sync-lag.ps1  v2-2-14-release-evidence.sh  v2-2-15-chain-id-isolation-evidence.sh  v2-2-15-p2p-3node-rehearsal.sh  v2-2-15-p2p-5node-rehearsal.sh  v2-2-15-p2p-churn-rejoin-evidence.sh  v2-2-15-p2p-clean-rehearsal-data.sh  v2-2-15-p2p-lag-recovery-evidence.sh  v2-2-15-release-evidence.sh  (+81 more)
(+253 files in other folders)
