[workspace]
resolver = "2"
members = [
  "crates/pulsedag-core",
  "crates/pulsedag-crypto",
  "crates/pulsedag-wallet",
  "crates/pulsedag-storage",
  "crates/pulsedag-p2p",
  "crates/pulsedag-api",
  "crates/pulsedag-rpc",
  "apps/pulsedagd",
  "apps/pulsedag-miner",
]

[workspace.package]
version = "2.2.8"
