[package]
name = "pulsedag-miner"
version = "2.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
pulsedag-core = { path = "../../crates/pulsedag-core" }
pulsedag-rpc = { path = "../../crates/pulsedag-rpc" }

[dev-dependencies]
hex = "0.4"
