[package]
name = "pulsedag-core"
version = "0.6.3"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"

blake3 = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
proptest = "1"

[[bench]]
name = "pow_core"
harness = false
